--- a/KrysiaBartek2024/others/strefujot.tex
+++ b/KrysiaBartek2024/others/strefujot.tex
@@ -132,7 +132,7 @@ lo / me / hi / no
     \item 2\diams = 10+, relay
     \item 2\major = 6-11 own suit (solid)
     \item 2\nt = preempt \clubs or 2-suiter w/o \clubs (\then 3\clubs)
-    \item 3\clubs = \inv + \clubs
+    \item 3\clubs = \inv\ + \clubs
     \item 3\diams/3\hearts/3\spades = \inv, 6+
     \item 3\nt = 12-15, no 4\major
 \end{itemize}
