--- a/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
+++ b/KrysiaBartek2024/source/1ntOpening_KacperVersion.tex
@@ -113,7 +113,7 @@
 \begin{itemize}
     \item 3\diams = 43\minor
     \item 3\hearts = 4\clubs
-    \item 3\spades = 4\diams (over 2\spades: slam try + fit)
+    \item 3\spades = 4\diams
     \item 3\nt = 4333 (4\major)
 \end{itemize}
 
@@ -147,8 +147,8 @@
 \begin{itemize}
     \item 2\spades = \inv
     \item 2\nt = 4+\clubs\ \gf
-    \item 3\clubs = 4+\diams \gf
-    \item 3\diams = 6+\hearts \gf
+    \item 3\clubs = 4+\diams\ \gf
+    \item 3\diams = 6+\hearts\ \gf
     \item 3\hearts = 5\hearts4\spades, \inv
     \item 3\spades/4\minor = splinter
 \end{itemize}
@@ -157,7 +157,7 @@
                 2\hearts -- 2\spades\\
                 ?}
 \begin{itemize}
-    \item 2\nt/3\hearts =min
+    \item 2\nt/3\hearts = min
     \item 3\clubs = max, no 3\hearts
     \item 3\diams = max, 3\hearts
     \item 3\nt = choice of games
@@ -167,7 +167,7 @@
                 2\hearts -- 2\nt\\
                 ?}
 \begin{itemize}
-    \item 3\clubs = 3\hearts + 4\clubs
+    \item 3\clubs = 3\hearts\ + 4\clubs
     \item 3\diams = 3\hearts
     \item 3\hearts = 4\clubs
     \item 3\nt = to play
@@ -177,10 +177,10 @@
                 2\spades -- ?}
 \begin{itemize}
     \item 2\nt = 4+\clubs\ \gf
-    \item 3\clubs = 4+\diams \gf
+    \item 3\clubs = 4+\diams\ \gf
     \item 3\diams = 55\major, \inv
-    \item 3\hearts = 6+\spades \gf
-    \item 3\spades = 6+\spades \inv
+    \item 3\hearts = 6+\spades\ \gf
+    \item 3\spades = 6+\spades\ \inv
 \end{itemize}
 
 \subsubsection*{1\nt -- 2\spades\\
