--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -20,11 +20,11 @@
 \subsubsection*{2\nt -- ?}
 \begin{itemize}
     \item 3\clubs\ = Puppet Stayman
-    \item 3\diams\ = \then \hearts + superaccepts
-    \item 3\hearts\ = \then \spades + superaccepts
+    \item 3\diams\ = \then\ \hearts\ + superaccepts
+    \item 3\hearts\ = \then\ \spades\ + superaccepts
     \item 3\spades\ = forces 3\nt
     \item 3\nt\ = 5\spades4\hearts, \nf \imp
-    \item 4\clubs\ = 55 \major
+    \item 4\clubs\ = 55\major
     \item 4\diams, 4\hearts\ = Texas
     \item 4\nt\ = quantitative
 \end{itemize}
