--- a/KrysiaBartek2024/source/dealingWithMulti.tex
+++ b/KrysiaBartek2024/source/dealingWithMulti.tex
@@ -64,8 +64,8 @@ System like after 2\diams preempt.
     \item 2\major = 5+\major, to play
     \item 2\nt = Lebensohl (see below)
     \item 3\clubs = Stayman \vimp
-    \item 3\diams = \trsf{\hearts}, \gf + superaccepts
-    \item 3\hearts = \trsf{\spades}, \gf + superaccepts
+    \item 3\diams = \trsf{\hearts}, \gf\ + superaccepts
+    \item 3\hearts = \trsf{\spades}, \gf\ + superaccepts
     \item 3\spades = \trsf{\nt}, no \major stoppers
     \item 4\diams, 4\hearts = Texas
 \end{itemize}
@@ -83,8 +83,8 @@ System like after 2\diams preempt.
     \item \dbl = 9+, \fton{2\nt}, no 5\major, no \major shortness
     \item 2\nt = Lebensohl (see below)
     \item 3\clubs = Stayman \vimp
-    \item 3\diams = \trsf{\hearts}, \gf + superaccepts
-    \item 3\hearts = \trsf{\spades}, \gf + superaccepts
+    \item 3\diams = \trsf{\hearts}, \gf\ + superaccepts
+    \item 3\hearts = \trsf{\spades}, \gf\ + superaccepts
     \item 3\spades = takeout with opps' suit shortness, \gf
     \item 4\diams, 4\hearts = Texas
 \end{itemize}
