--- a/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1c.tex
@@ -34,7 +34,7 @@
     \item 1\spades = \then 1\nt
     \item 1\nt = 7-10, \hearts stopper
     \item 2\clubs/2\hearts/2\spades = transfer to \diams/\spades/\clubs 6+, weak/\gf
-    \item 2\diams = \invp, ask stopper
+    \item 2\diams = \invp, ask stopper (2\nt/3\clubs = \nf)
     \item 2\nt = \inv
     \item 3\clubs/3\diams/3\spades = \inv
 \end{itemize}
@@ -44,7 +44,7 @@
     \item \dbl = 4-5\hearts
     \item 1\nt = 7-10, \spades stopper
     \item 2\clubs/2\diams/2\spades = transfer to \diams/\hearts/\clubs 6+, weak/\gf
-    \item 2\hearts = \gf, ask stopper
+    \item 2\hearts = \invp, ask stopper (2\nt/3\clubs = \nf)
     \item 2\nt = \inv
     \item 3\clubs/3\diams/3\hearts = \inv
 \end{itemize}
