--- a/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1cPreempt.tex
@@ -62,7 +62,7 @@
 \begin{itemize}
     \item \dbl = takeout, \gf
     \item 3\hearts = transfer to \spades, \invp
-    \item 3\spades = transfer to \diams, \gf
+    \item 3\spades = transfer to \hearts, \gf
 \end{itemize}
 
 \subsubsection*{1\clubs -- (3\hearts) -- ?}
