--- a/KrysiaBartek2024/source/oppsOvercallTfx1h.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1h.tex
@@ -31,7 +31,7 @@
     \item \dbl = 10+, penalty
     \item 2\clubs/2\diams/2\hearts/2\spades = \nat, \nf
     \item 2\nt = \minor
-    \item 3\clubs = \inv + fit
+    \item 3\clubs = \inv\ + fit
     \item 3\diams = mixed raise
     \item 3\hearts = preempt
     \item 3\spades/3\nt/4\clubs = \spades/\diams/\clubs + fit
@@ -43,8 +43,8 @@
     \item 2\diams = \fonce
     \item 2\hearts = 6-10
     \item 2\spades = \fonce
-    \item 2\nt = \gf + fit
-    \item 3\clubs = \inv + fit
+    \item 2\nt = \gf\ + fit
+    \item 3\clubs = \inv\ + fit
     \item 3\diams = mixed raise
     \item 3\hearts = preempt
     \item 3\spades/4\diams = color + fit
@@ -56,8 +56,8 @@
     \item 2\hearts = 6-10
     \item 2\spades = \fonce
     \item 2\nt = \clubs \invp
-    \item 3\clubs = \gf + fit
-    \item 3\diams = \inv + fit
+    \item 3\clubs = \gf\ + fit
+    \item 3\diams = \inv\ + fit
     \item 3\hearts = preempt
     \item 3\spades/4\clubs = color + fit
 \end{itemize}
