--- a/Multi/multi.tex
+++ b/Multi/multi.tex
@@ -36,8 +36,8 @@
     \subitem \gf\ bez starszych czwórek (3\diams) \vimp
     \subitem \inv z \hearts\ lub \spades\ (3\hearts, 3\spades)
     \item 3\clubs\ = \textbf{zwykły Stayman} \vimp
-    \item 3\diams\ = transfer na \hearts, \gf + przyjęcia
-    \item 3\hearts\ = transfer na \spades, \gf + przyjęcia \br
+    \item 3\diams\ = transfer na \hearts, \gf\ + przyjęcia
+    \item 3\hearts\ = transfer na \spades, \gf\ + przyjęcia \br
     \item 3\spades\ = transfer na \nt, brak trzymań w obydwu starych
     \item 4\diams, 4\hearts\ = transfer
 \end{itemize}
