--- a/KrysiaBartek2024/source/oppsOvercallTfx1s.tex
+++ b/KrysiaBartek2024/source/oppsOvercallTfx1s.tex
@@ -20,7 +20,7 @@
     \item \dbl = 10+, penalty
     \item 2\clubs/2\diams/2\hearts/2\spades = \nat, \nf
     \item 2\nt = \minor
-    \item 3\clubs = \inv + fit
+    \item 3\clubs = \inv\ + fit
     \item 3\diams = mixed raise
     \item 3\hearts/4\clubs/4\diams = color + fit
 \end{itemize}
