--- a/Wyklady/liga/unified_strefa_2024.tex
+++ b/Wyklady/liga/unified_strefa_2024.tex
@@ -178,42 +178,73 @@
 
 
 \pagebreak
-\subsection*{Rebid 2\nt}
+\subsection*{Rebid 2\nt i transferowy gadżet}
 
 \sequence{{1\clubs}{1\hearts}{2\ntx}}
 \begin{options}[2]
-    \item[3\clubs] \textbf{Sztuczne pytanie} \imp
-    \item[3\diams] 4+\diams 
-    \item[3\hearts] 6+\hearts, ustala kolor
+    \item[3\clubs] \textbf{Sztuczne pytanie} o trefle lub fit \hearts \imp
+    \item[3\diams] 5+\diams
+    \item[3\hearts] 6+\hearts \orr 5\hearts4\spades (nie ustala kierów!)  \vimp
     \item[3\spades] 4\hearts, 4\spades 
+    \item[4\clubs] Auto-splinter na 6\hearts
+    \item[4\diams] Auto-splinter na 6\hearts
 \end{options}
 
 \sequence{{1\clubs}{1\hearts}{2\ntx}{3\clubs}}
 \begin{options}[1]
-    \item[3\diams] 4+\clubs, brak fitu \hearts
-    \item[3\hearts] 3-\clubs, 3\hearts
-    \item[3\spades] 4+\clubs, 3\hearts 
+    \item[3\diams] 3\hearts, brak 5+\clubs \vimp
+    \item[3\hearts] 5+\clubs, brak 3\hearts \vimp
+    \item[3\spades] 5+\clubs i 3\hearts \vimp
     \item[3\nt] Nic z powyższych
-    \item[4\clubs] 4\hearts  
+    \item[4\clubs+] 4\hearts  
 \end{options}
 
+\sequence{{1\clubs}{1\hearts}{2\ntx}{3\hearts}}
+\begin{options}[1]
+    \item[3\spades] 4\spades
+    \item[3\nt] Brak fitu w obu starych
+    \item[4\clubs+] 3+\hearts, brak 4\spades (ustala kiery)
+\end{options}
+
+\sequence{{1\clubs}{1\hearts}{2\ntx}{3\hearts}{3\spades}}
+\begin{options}[2]
+    \item[4\clubs] Ustalenie \hearts (niższy)
+    \item[4\diams] Ustalenie \spades (wyższy) 
+\end{options}
+
+\sequence{{1\clubs}{1\hearts}{2\ntx}{3\spades}}
+\begin{options}[1]
+    \item[3\nt] Brak fitu w obu starych
+    \item[4\clubs] Nadzwyczaj silna karta z fitem \hearts
+    \item[4\diams] Nadzwyczaj silna karta z fitem \spades 
+\end{options}
+
+
+\pagebreak
 \sequence{{1\clubs}{1\spades}{2\ntx}}
 \begin{options}[2]
-    \item[3\clubs] \textbf{Sztuczne pytanie} \imp
-    \item[3\diams] 4+\diams 
+    \item[3\clubs] \textbf{Sztuczne pytanie} o trefle lub fit \spades \imp
+    \item[3\diams] 5+\diams 
     \item[3\hearts] 5\spades, 4\hearts 
-    \item[3\spades] 6+\spades, ustala kolor
+    \item[3\spades] 6+\spades, \textbf{ustala kolor}
 \end{options}
 
 \sequence{{1\clubs}{1\spades}{2\ntx}{3\clubs}}
 \begin{options}[1]
-    \item[3\diams] 4+\clubs, brak fitu \spades
-    \item[3\hearts] 4+\clubs, 3\spades
-    \item[3\spades] 3-\clubs, 3\spades 
-    \item[3\nt] Brak trefli i potencjalnego fitu \spades
+    \item[3\diams] 3\spades, brak 5+\clubs \vimp
+    \item[3\hearts] 5+\clubs, brak 3\spades \vimp
+    \item[3\spades] 5+\clubs i 3\spades \vimp
+    \item[3\nt] Nic z powyższych
     \item[4\clubs] 4\spades  
 \end{options}
 
+\sequence{{1\clubs}{1\spades}{2\ntx}{3\hearts}}
+\begin{options}[1]
+    \item[3\spades] ustala \spades
+    \item[3\nt] Do gry
+    \item[4\clubs] cue-bid na \hearts
+    \item[4\diams] cue-bid na \hearts
+\end{options}
 
 
 
