--- a/odwrotny-gadzet/odwrotny-gadzet.tex
+++ b/odwrotny-gadzet/odwrotny-gadzet.tex
@@ -46,6 +46,13 @@ Dodatkowo:
     inwit do gry kolorowej (bo zostało zalicytowane przez Gadżet).
 \end{itemize}
 
+Nieoczywiste zalety:
+\begin{itemize}
+    \item W sekwencjach typu 1\clubs - 1\spades --- 2\nt - 3\clubs --- 3\spades można
+    wsadzić +1 \lsf\ i wszystko wiadomo o ręce. 
+    \item Dzięki temu można rozdzielić splintery na bezpośrednie (GF bo splinter) i przez 2NT (GF + splinter)
+    czy tam na odwrót
+\end{itemize}
 
 \pagebreak
 \subsection*{Rebid 2\nt po otwarciu 1\clubs i odwrócony gadżet}
