--- a/KrysiaBartek2024/others/strefujot.tex
+++ b/KrysiaBartek2024/others/strefujot.tex
@@ -96,9 +96,9 @@ lo / me / hi / no
 \begin{itemize}
     \item 2\nt = \bal, 4\hearts\ + \lsf*
     \item 3\clubs = 4\hearts, \unbal (3\diams = \lsf)
-    \item 3\diams = 5\clubs4\diams3\hearts
+    \item 3\diams = 3\hearts
     \item 3\hearts = 6\clubs3\hearts
-    \item 3\spades = 4333\hearts (3\nt = \soff)
+    \item 3\spades = 5\clubs4\diams3\hearts
 \end{itemize}
 \end{bidpage}
 
@@ -174,8 +174,10 @@ lo / me / hi / no
 \subsubsection*{1\clubs\ -- 1\diams\\
                 ?}
 \begin{itemize}
-    \item 2\diams = multi: 5\clubs + 4 other (or 4441) 19+
+    \item 2\clubs = \nat 15+, \nf
+    \item 2\diams = multi: 5\clubs\ + 4 other (or 4441) 19+
     \item 2\hearts = Kokish relay
+    \item 2\spades = acol spades
     \item 2\nt = 23-24 \bal
     \item 3\clubs = acol \diams
 \end{itemize}
