--- a/KrysiaBartek2024/source/1ntOpening.tex
+++ b/KrysiaBartek2024/source/1ntOpening.tex
@@ -20,8 +20,8 @@
 \subsubsection*{1\ntx\ -- ?}
 \begin{itemize}
     \item 2\clubs\ = Stayman
-    \item 2\diams\ = forces 2\hearts
-    \item 2\hearts\ = forces 2\spades
+    \item 2\diams\ = \trsf{2\hearts}
+    \item 2\hearts\ = \trsf{2\spades}
     \item 2\spades\ = \inv or \trsf{\clubs}
     \item 2\nt\ = \trsf{\diams}
     \item 3\clubs\ = Puppet Stayman
@@ -93,6 +93,5 @@
 \end{itemize}
 
 %%% SYSTEM END %%%
-
 
 \end{document}
