--- a/KrysiaBartek2024/SYSTEM/strefujot.tex
+++ b/KrysiaBartek2024/SYSTEM/strefujot.tex
@@ -23,7 +23,7 @@
     \vspace*{2cm}
     {\Huge \clubs Strefujot \clubs\\}
     \vspace{1.5cm}
-    \includegraphics[width=10cm]{noe.jpg}\\
+    \includegraphics[width=10cm]{../others/noe.jpg}\\
     \vspace{1cm}
     {\Large Krysia i Bartek\\}
 \end{titlepage}
@@ -36,11 +36,11 @@ lo / me / hi / no
 \end{bidpage}
 
 \begin{bidpage}
-\section{Negat}
+\section{Negate}
 
 \subsubsection*{1\clubs -- ?}
 \begin{itemize}
-    \item 1\diams\ = any 0-6 or 7-10 w/o 4\major
+    \item 1\diams\ = any 0-6 or 7-10 w/o 4\major or \diams\ \gf
 \end{itemize}
 \end{bidpage}
 
@@ -48,12 +48,33 @@ lo / me / hi / no
 \subsubsection*{1\clubs -- 1\diams\\
                 ?}
 \begin{itemize}
-    \item 1\hearts = 12-14 \bal, no 4\spades
+    \item 1\hearts = 12-14 \bal, 2+\hearts
     \item 1\spades = 12-14 \bal, 4\spades
     \item 1NT = 18-20 \bal
-    \item 2\clubs = 15+, 5+\clubs
-    \item 2\nt = 23-24 \bal, \nf
+    \item 2\clubs = 15+, 5+\clubs, \nf
+    \item 2\diams = 19+ \unbal (see next sections)
     \item 2\hearts = Kokish relay
+    \item 2\spades = acol \spades (2\nt = relay \then transfers)
+    \item 2\nt = 23-24 \bal, \nf
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{1\clubs -- 1\diams\\
+                2\diams -- ?}
+\begin{itemize}
+    \item 2\hearts = negate 0-4
+    \item 2\spades = \gf\ 4+
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{1\clubs -- 1\diams\\
+                2\diams -- 2\hearts\\
+                ?}
+\begin{itemize}
+    \item 2\spades = minimum
+    \item 2\nt = maximum
 \end{itemize}
 \end{bidpage}
 
@@ -145,6 +166,14 @@ lo / me / hi / no
     \item 2\major = 4\major
     \item 2\nt = no 4\major, 6+\clubs, \gf
     \item 3\clubs = no 4\major, 6+\clubs, minimum
+\end{itemize}
+\end{bidpage}
+
+\begin{bidpage}
+\subsubsection*{2\clubs\ -- 2\diams\\
+                \anysuit{\textbullet} -- ?}
+\begin{itemize}
+    \item 3\diams = ask 3\major
 \end{itemize}
 \end{bidpage}
 
